[package]
name = "prices"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "2.1.4" }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
connect-sdk = { git = "https://github.com/skip-mev/connect-sdk", rev = "a1e4562b404185903c9f02dd7255e6ea89201a41", package = "connect-sdk" }
schemars = "0.8.21"

[profile.release]
opt-level = "s"